# terminal-which-key

./: Cargo.toml  LICENSE.txt  README.md  Roadmap.md  TODOs.md
doc/: Roadmap.md  init.lua
example/: keybindings.yaml  styles.yaml
pseudo-terminal-task/: Cargo.toml
pseudo-terminal-task/src/: lib.rs
src/: config.lua  config.rs  keybinding.rs  keys.rs  main.rs  nbr.rs  non_blocking_reader.rs  pty.rs  window.rs
terminal-which-key/: Cargo.toml
terminal-which-key/src/: main.rs
terminal-window/: Cargo.toml
terminal-window/src/: lib.rs
test_files/: complex_config.lua  minimal_two_menus.lua  simple_config.lua  zellij_config.lua
