[package]
name = "pseudo-terminal-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
portable-pty = "0.7.0"
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.21", features = ["executor"] }
nonblock = "0.1.0"
