[package]
name = "terminal-which-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tokio = { version = "1.19.2", features = ["full"] }
pseudo-terminal-task = { path = "../pseudo-terminal-task" }
